# DYNAMO

./: README.md  pyproject.toml  requirements.txt
configs/: default.yaml
dtn/: __init__.py
dtn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
dtn/data/: __init__.py  datasets.py
dtn/experiments/: __init__.py  ablations.py  exp1_split_mnist.py  exp2_seq_cifar100.py
dtn/models/: __init__.py  baselines.py  dtn.py  thermo_layer.py
dtn/training/: __init__.py  trainers.py
dtn/utils/: __init__.py  reporting.py
dtn/viz/: __init__.py  plots.py
scripts/: run_all.py
tests/: test_models.py
