[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "dtn"
version     = "1.0.0"
description = "Dynamic Thermodynamic Network — Continual Learning via Differentiable Neural Morphogenesis"
readme      = "README.md"
requires-python = ">=3.9"
license     = { text = "MIT" }

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
]

[project.scripts]
dtn-run = "scripts.run_all:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dtn*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
